# cosmic-text

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ci.sh  crates.js  deny.toml  editor-libcosmic-image.sh  editor-libcosmic.sh  editor-orbclient.sh  editor-test.sh  editor.sh  help.html  markdown.sh  multiview.sh  redoxer.sh  rich-text.sh  search-index.js  settings.html  src-files.js  syntax.sh  terminal.sh  test.sh
benches/: layout.rs  text_shaping_benchmarks.rs
bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
bytemuck/: all.html  derive.AnyBitPattern.html  derive.ByteEq.html  derive.ByteHash.html  derive.CheckedBitPattern.html  derive.Contiguous.html  derive.NoUninit.html  derive.Pod.html  derive.TransparentWrapper.html  derive.Zeroable.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.fill_zeroes.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  fn.write_zeroes.html  index.html  macro.offset_of.html  sidebar-items.js  trait.AnyBitPattern.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  (+4 more)
bytemuck_derive/: all.html  derive.AnyBitPattern.html  derive.ByteEq.html  derive.ByteHash.html  derive.CheckedBitPattern.html  derive.Contiguous.html  derive.NoUninit.html  derive.Pod.html  derive.TransparentWrapper.html  derive.Zeroable.html  index.html  sidebar-items.js
core_maths/: all.html  index.html  sidebar-items.js  trait.CoreFloat.html
cosmic_text/: all.html  enum.Action.html  enum.Affinity.html  enum.Align.html  enum.BufferRef.html  enum.Cached.html  enum.Command.html  enum.Ellipsize.html  enum.EllipsizeHeightLimit.html  enum.Family.html  enum.FamilyOwned.html  enum.Hinting.html  enum.LineEnding.html  enum.Motion.html  enum.Selection.html  enum.Shaping.html  enum.Stretch.html  enum.Style.html  enum.SubpixelBin.html  enum.SwashContent.html  enum.UnderlineStyle.html  enum.Wrap.html  fn.render_decoration.html  index.html  sidebar-items.js  struct.Angle.html  struct.Attrs.html  struct.AttrsList.html  struct.AttrsOwned.html  struct.BidiParagraphs.html  struct.BorrowedWithFontSystem.html  struct.Buffer.html  struct.BufferLine.html  struct.CacheKey.html  struct.CacheKeyFlags.html  struct.CacheMetrics.html  struct.Change.html  struct.ChangeItem.html  struct.Color.html  struct.Cursor.html  (+39 more)
crossbeam_deque/: all.html  enum.Steal.html  index.html  struct.Injector.html  struct.Stealer.html  struct.Worker.html
crossbeam_epoch/: all.html  fn.default_collector.html  fn.is_pinned.html  fn.pin.html  fn.unprotected.html  index.html  struct.Atomic.html  struct.Collector.html  struct.CompareExchangeError.html  struct.Guard.html  struct.LocalHandle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html  trait.Pointable.html  trait.Pointer.html  type.CompareAndSetError.html
crossbeam_utils/: all.html  index.html  struct.Backoff.html  struct.CachePadded.html
either/: all.html  enum.Either.html  index.html  macro.for_both.html  macro.try_left.html  macro.try_right.html  struct.IterEither.html  trait.IntoEither.html
examples/editor-libcosmic/: Cargo.toml
examples/editor-libcosmic-image/: Cargo.toml
examples/editor-libcosmic/src/: main.rs  syntax_text_box.rs  text.rs  text_box.rs  text_new.rs
examples/editor-orbclient/: Cargo.toml
examples/editor-orbclient/src/: main.rs  vi.rs
examples/editor-test/: Cargo.toml
examples/editor-test/src/: main.rs
examples/rich-text/: Cargo.toml  main.rs
examples/rich-text/src/: main.rs
font_types/: all.html  constant.CFF_SFNT_VERSION.html  constant.CFF_SFTN_VERSION.html  constant.TRUE_SFNT_VERSION.html  constant.TTC_HEADER_TAG.html  constant.TT_SFNT_VERSION.html  enum.InvalidTag.html  enum.PenCommand.html  index.html  macro.newtype_scalar!.html  macro.newtype_scalar.html  sidebar-items.js  struct.BigEndian.html  struct.BoundingBox.html  struct.F26Dot6.html  struct.F2Dot14.html  struct.F4Dot12.html  struct.F6Dot10.html  struct.FWord.html  struct.Fixed.html  struct.GlyphId.html  struct.GlyphId16.html  struct.Int24.html  struct.LongDateTime.html  struct.MajorMinor.html  struct.Matrix.html  struct.NameId.html  struct.Nullable.html  struct.Offset16.html  struct.Offset24.html  struct.Offset32.html  struct.Point.html  struct.Tag.html  struct.TryFromGlyphIdError.html  struct.UfWord.html  struct.Uint24.html  struct.Version16Dot16.html  trait.Compatible.html  trait.FixedSize.html  trait.MatrixElement.html  (+2 more)
fontconfig_parser/: all.html  enum.BinaryOp.html  enum.ConfigPart.html  enum.Constant.html  enum.DirPrefix.html  enum.EditBinding.html  enum.EditMode.html  enum.Error.html  enum.Expression.html  enum.FontMatch.html  enum.IntOrRange.html  enum.ListOp.html  enum.MatchTarget.html  enum.PrefixBehavior.html  enum.Property.html  enum.PropertyKind.html  enum.PropertyTarget.html  enum.TernaryOp.html  enum.TestCompare.html  enum.TestQual.html  enum.TestTarget.html  enum.UnaryOp.html  enum.Value.html  fn.parse_config_parts.html  index.html  sidebar-items.js  struct.Alias.html  struct.CacheDir.html  struct.Config.html  struct.Dir.html  struct.DirData.html  struct.Edit.html  struct.FontConfig.html  struct.Include.html  struct.Match.html  struct.RemapDir.html  struct.RemapDirData.html  struct.SelectFont.html  struct.Test.html  type.Bool.html  (+4 more)
fontdb/: all.html  enum.Family.html  enum.Language.html  enum.Source.html  enum.Stretch.html  enum.Style.html  index.html  sidebar-items.js  struct.Database.html  struct.FaceInfo.html  struct.ID.html  struct.Query.html  struct.Weight.html
harfrust/: all.html  enum.BufferClusterLevel.html  enum.Direction.html  index.html  sidebar-items.js  struct.BufferFlags.html  struct.Feature.html  (+17 more)
(+26761 files in other folders)
