[package]
name = "editor-libcosmic-image"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cosmic-text = { path = "../../" }
env_logger = "0.9"
fontdb = "0.9"
lazy_static = "1.4"
log = "0.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
branch = "cosmic-design-system"
#path = "../../../libcosmic"

[dependencies.rfd]
version = "0.10"
#TODO: iced portal
#default-features = false
#features = ["xdg-portal"]
