[package]
name = "editor-libcosmic"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cosmic-text = { path = "../../", features = ["syntect"] }
env_logger = "0.10"
fontdb = "0.13"
lazy_static = "1.4"
log = "0.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
rev = "24709e9c3b56c49a0af168d1e37ebef85f112c8a"
default-features = false
features = ["winit_softbuffer"]
#path = "../../../libcosmic"

[dependencies.rfd]
version = "0.11"
#TODO: iced portal
#default-features = false
#features = ["xdg-portal"]

[features]
default = []
vi = ["cosmic-text/vi"]
