[package]
name = "editor-test"
version = "0.1.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cosmic-text = { path = "../../" }
env_logger = "0.11"
fontdb = "0.23"
log = "0.4"
orbclient = "0.3.50"
unicode-segmentation = "1.12"
